# zktrie

./: Cargo.toml  README.md  go.mod  lib.go  rust-toolchain
trie/: zk_trie.go  zk_trie_impl.go  zk_trie_impl_test.go  zk_trie_node.go  zk_trie_proof.go
