[package]
name = "zktrie"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
links = "zktrie"

[dependencies]

[build-dependencies]
gobuild = "0.1.0-alpha.1"


[dev-dependencies]
hex = "0.4"
halo2_proofs = { git = "https://github.com/light-scale/halo2.git", branch = "ls-dev-0902" }
mpt-circuits = { package = "halo2-mpt-circuits", git = "https://github.com/light-scale/mpt-circuit.git", branch = "ls-dev-0902" }