[package]
name = "zktrie"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
links = "zktrie"

# Companioned with zktrie module: v0.5.0

[dependencies]

[build-dependencies]
gobuild = "0.1.0-alpha.1"


[dev-dependencies]
hex = "0.4"
halo2_proofs = { git = "https://github.com/kroma-network/halo2.git", rev = "0918c29" }
poseidon-circuit = { git = "https://github.com/kroma-network/poseidon-circuit.git", rev = "b83e3db" }

[features]
dual_codehash = []
